--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Heha amogus
+
+
+
+
+
+
+
+
+
+Best geometry dash player ever
+https://www.youtube.com/channel/UCenZFZNm7egJzBPUoyy5B9w <<<<< my channel
